--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.16</lombok.version>
         <micrometer.version>1.0.0-rc.2</micrometer.version>
+        <metrics.version>3.2.5</metrics.version>
         <spring.boot.version>2.0.0.M5</spring.boot.version>
         <spring.boot.maven.plugin>2.0.0.M4</spring.boot.maven.plugin>
         <swagger.version>2.7.0</swagger.version>
@@ -54,6 +55,22 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-jmx</artifactId>
             <version>${micrometer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-statsd</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-datadog</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-servlets</artifactId>
+            <version>${metrics.version}</version>
         </dependency>
 
         <dependency>
