Migrated to Spring Boot 2.0.0 release, removed Servlet Registry, and added Sonar Qube.

--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,15 @@
     <name>Spring Boot Actuator Example</name>
 
     <properties>
-        <jackson.version>2.9.2</jackson.version>
+        <jackson.version>2.9.4</jackson.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
-        <lombok.version>1.16.16</lombok.version>
-        <micrometer.version>1.0.0-rc.2</micrometer.version>
-        <metrics.version>3.2.5</metrics.version>
-        <spring.boot.version>2.0.0.M5</spring.boot.version>
-        <spring.boot.maven.plugin>2.0.0.M4</spring.boot.maven.plugin>
-        <swagger.version>2.7.0</swagger.version>
+        <lombok.version>1.16.20</lombok.version>
+        <micrometer.version>1.0.2</micrometer.version>
+        <metrics.version>4.0.2</metrics.version>
+        <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
+        <spring.boot.maven.plugin>2.0.0.RELEASE</spring.boot.maven.plugin>
+        <swagger.version>2.8.0</swagger.version>
     </properties>
 
     <dependencyManagement>
@@ -49,28 +49,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-jmx</artifactId>
-            <version>${micrometer.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-statsd</artifactId>
-            <version>${micrometer.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-datadog</artifactId>
-            <version>${micrometer.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.dropwizard.metrics</groupId>
-            <artifactId>metrics-servlets</artifactId>
-            <version>${metrics.version}</version>
         </dependency>
 
         <dependency>
